Crash on BLI_assert(sfile->previews_timer == NULL); #76471

Closed
opened 2020-05-06 11:55:35 +02:00 by Richard Antalik · 17 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.1 26.20.15029.20013

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-03 22:25, hash: 33bdd91fb8
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash on BLI_assert(sfile->previews_timer == NULL);

>	blender.exe!BLI_system_backtrace(_iobuf * fp) Line 353	C

 	blender.exe!file_free(SpaceLink * sl) Line 142	C
 	blender.exe!BKE_spacedata_freelist(ListBase * lb) Line 222	C
 	blender.exe!BKE_screen_area_free(ScrArea * area) Line 501	C
 	blender.exe!BKE_screen_area_map_free(ScrAreaMap * area_map) Line 509	C
 	blender.exe!screen_free_data(ID * id) Line 69	C
 	blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 74	C
 	blender.exe!BKE_id_free_ex(Main * bmain, void * idv, int flag, const bool use_flag_from_idtag) Line 150	C
 	blender.exe!BKE_main_free(Main * mainvar) Line 189	C
 	blender.exe!BKE_blender_globals_clear() Line 149	C
 	blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 282	C
 	blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 414	C
 	blender.exe!BKE_blendfile_read(bContext * C, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 452	C
 	blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 639	C
 	blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports, const bool autoexec_init) Line 2110	C
 	blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2252	C
 	blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2289	C
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2275	C
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2374	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2784	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2836	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3231	C
 	blender.exe!WM_main(bContext * C) Line 453	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530	C
 	[External Code]	

Exact steps for others to reproduce the error

  • Open Video Editing template
  • Change file browser area to graph editor

Close Blender or load new file

Should crash now.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.1 26.20.15029.20013 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-05-03 22:25, hash: `33bdd91fb8` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash on BLI_assert(sfile->previews_timer == NULL); ``` > blender.exe!BLI_system_backtrace(_iobuf * fp) Line 353 C blender.exe!file_free(SpaceLink * sl) Line 142 C blender.exe!BKE_spacedata_freelist(ListBase * lb) Line 222 C blender.exe!BKE_screen_area_free(ScrArea * area) Line 501 C blender.exe!BKE_screen_area_map_free(ScrAreaMap * area_map) Line 509 C blender.exe!screen_free_data(ID * id) Line 69 C blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 74 C blender.exe!BKE_id_free_ex(Main * bmain, void * idv, int flag, const bool use_flag_from_idtag) Line 150 C blender.exe!BKE_main_free(Main * mainvar) Line 189 C blender.exe!BKE_blender_globals_clear() Line 149 C blender.exe!setup_app_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 282 C blender.exe!setup_app_blend_file_data(bContext * C, BlendFileData * bfd, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 414 C blender.exe!BKE_blendfile_read(bContext * C, const unsigned char * filepath, const BlendFileReadParams * params, ReportList * reports) Line 452 C blender.exe!WM_file_read(bContext * C, const unsigned char * filepath, ReportList * reports) Line 639 C blender.exe!wm_file_read_opwrap(bContext * C, const unsigned char * filepath, ReportList * reports, const bool autoexec_init) Line 2110 C blender.exe!wm_open_mainfile__open(bContext * C, wmOperator * op) Line 2252 C blender.exe!wm_open_mainfile_exec(bContext * C, wmOperator * op) Line 2289 C blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, int val) Line 2275 C blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler_Op * handler, const wmEvent * event) Line 2374 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2784 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2836 C blender.exe!wm_event_do_handlers(bContext * C) Line 3231 C blender.exe!WM_main(bContext * C) Line 453 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 C [External Code] ``` **Exact steps for others to reproduce the error** - Open Video Editing template - Change file browser area to graph editor # Close Blender or load new file Should crash now.
Author
Member

Added subscriber: @iss

Added subscriber: @iss

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I cannot reproduce this with either the latest stable or current development versions of Blender.


Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006

I cannot reproduce this with either the latest stable or current development versions of Blender. ---- **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Just tested, neither mentioned 33bdd91fb8, nor 9b7754883b get the assert. I was opening new file (cmd + N )

Just tested, neither mentioned 33bdd91fb8, nor 9b7754883b get the assert. I was opening new file (cmd + N )
Author
Member

This still happens for me.
Did you test with debug or relwithdebinfo? I should specify this.

This still happens for me. Did you test with debug or relwithdebinfo? I should specify this.
Member

I tested Debug.

I tested Debug.

In #76471#926137, @iss wrote:
This still happens for me.
Did you test with debug or relwithdebinfo? I should specify this.

Debug

> In #76471#926137, @iss wrote: > This still happens for me. > Did you test with debug or relwithdebinfo? I should specify this. Debug
Author
Member

Added subscriber: @Harley

Added subscriber: @Harley
Author
Member

That's strange. I am not sure what to check if the freeing sequence is correct exactly. I was looking into this for a bit and haven't found anything strange.

Perhaps @Harley would know more?

That's strange. I am not sure what to check if the freeing sequence is correct exactly. I was looking into this for a bit and haven't found anything strange. Perhaps @Harley would know more?
Member

I can certainly take a look. But wondering if you've asked me just because I've generally poked around in there or was it because of some specific thing that I could have broken? Just in case that narrows things down.

I can certainly take a look. But wondering if you've asked me just because I've generally poked around in there or was it because of some specific thing that I could have broken? Just in case that narrows things down.

This issue was referenced by 2a8ba9c08e

This issue was referenced by 2a8ba9c08ec91d73a9c1f59b90aa9e9e37e492d8

Added subscriber: @brecht

Added subscriber: @brecht

I'll commit a fix for this. It's a rather subtle problem caused by 8b10e1b457 and b7f86ff722.

I'll commit a fix for this. It's a rather subtle problem caused by 8b10e1b457 and b7f86ff722.

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-08 01:55:56 +02:00
Author
Member

In #76471#926506, @Harley wrote:
I can certainly take a look. But wondering if you've asked me just because I've generally poked around in there or was it because of some specific thing that I could have broken? Just in case that narrows things down.

I just thought, that you are file browser guru, so you would be good person to ask :)

> In #76471#926506, @Harley wrote: > I can certainly take a look. But wondering if you've asked me just because I've generally poked around in there or was it because of some specific thing that I could have broken? Just in case that narrows things down. I just thought, that you are file browser guru, so you would be good person to ask :)
Member

@iss - I just thought, that you are file browser guru, so you would be good person to ask :)

Well thanks! Although I thought it more likely you were trying to remind me of some dumb thing I forgot that I had done in there.

I did look at that error and thought I was on the right track with that previews task, but then I saw Brecht's fix and I was nowhere near. LOL

> @iss - I just thought, that you are file browser guru, so you would be good person to ask :) Well thanks! Although I thought it more likely you were trying to remind me of some dumb thing I forgot that I had done in there. I did look at that error and thought I was on the right track with that previews task, but then I saw Brecht's fix and I was nowhere near. LOL
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76471
No description provided.