Fix T76471: timer not removed after changing file browser to another type

The file browser exit() callback was not called. RNA get functions should never
modify data, here the area type info to be changed before the screen and area
were properly updated.